<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:checked="false"
            android:title="TabbedActivity" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/login_icon"
            android:checked="false"
            android:title="@string/listusers" />
        <item
            android:id="@+id/nav_profile"
            android:checked="false"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:checked="false"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:checked="false"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/send" />
        </menu>
    </item>

</menu>